--- a/table.html
+++ b/table.html
@@ -46,7 +46,7 @@
     <main>
         <h1>HTML Table</h1>
         <table>
-            <caption>Employee Salary Table</caption>
+            <caption>Employee Salary Table and company name</caption>
             <thead>
                 <tr>
                     <th>Id</th>
