--- a/table.html
+++ b/table.html
@@ -99,6 +99,9 @@
             <li>Table header cell : th</li>
 
         </ul>
+        <button title="Please click me">Click me</button>
+        <button disabled>Click me</button>
+        <input type="number" max="10" min="5" name="" id="">
     </main>
 </body>
 
